fixed layout bugs

--- a/src/views/activity/Activity.css
+++ b/src/views/activity/Activity.css
@@ -139,6 +139,7 @@
 
 @media only screen and (max-width: 768px) {
   .header {
+    align-items: flex-start;
     flex-direction: column;
     padding-top: 1rem;
   }
@@ -194,7 +195,6 @@
     font-size: 1rem;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 0;
   }
 
   .wrapper h4 {
